src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Landing_Page_URL__c</fullName>
        <label>Landing Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <label>Members</label>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MRR_of_Opportunities_in_Campaign__c</fullName>
        <description>Replaces default field with the same name, but uses opportunity MRR instead of Amount.  Populated by Apex.</description>
        <label>MRR of Opportunities in Campaign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR_of_Won_Opportunities_in_Campaign__c</fullName>
        <description>Replaces default field with the same name, but uses opportunity MRR instead of Amount. Populated by Apex.</description>
        <label>MRR of Won Opportunities in Campaign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>