src/objects/Campaign/fields/Acquisition_Cost__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Cost__c</fullName>
    <description>Unloaded marketing CAC, does not include overhead.</description>
    <formula>IF( NumberOfWonOpportunities = 0, NULL , 
(Actual_Cost_in_Campaign__c /  NumberOfWonOpportunities))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unloaded marketing CAC, does not include overhead.</inlineHelpText>
    <label>Acquisition Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>