src/objects/Campaign/fields/Actual_Cost_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_in_Campaign__c</fullName>
    <formula>January__c +  February__c +  March__c +  April__c +  May__c +  June__c +  July__c +  August__c +  September__c +  October__c +  November__c +  December__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of monthly campaign spend.</inlineHelpText>
    <label>Actual Cost in Campaign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>