src/objects/Campaign/fields/April__c.field-meta.xml
<CustomField>
    <fullName>April__c</fullName>
    <description>April campaign spend</description>
    <label>April</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>