src/objects/Campaign/fields/August__c.field-meta.xml
<CustomField>
    <fullName>August__c</fullName>
    <description>August campaign spend</description>
    <label>August</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>