src/objects/Campaign/fields/Budget_Notes__c.field-meta.xml
<CustomField>
    <fullName>Budget_Notes__c</fullName>
    <label>Budget Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>