src/objects/Campaign/fields/Cost_per_Response__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Response__c</fullName>
    <formula>IF( NumberOfResponses = 0, NULL , 
(Actual_Cost_in_Campaign__c / Members__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per Response</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>