src/objects/Campaign/fields/December__c.field-meta.xml
<CustomField>
    <fullName>December__c</fullName>
    <description>December campaign spend.</description>
    <label>December</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>