src/objects/Campaign/fields/February__c.field-meta.xml
<CustomField>
    <fullName>February__c</fullName>
    <description>February campaign spend</description>
    <label>February</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>