src/objects/Campaign/fields/January__c.field-meta.xml
<CustomField>
    <fullName>January__c</fullName>
    <description>January campaign spend</description>
    <label>January</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>