src/objects/Campaign/fields/July__c.field-meta.xml
<CustomField>
    <fullName>July__c</fullName>
    <description>July campaign spend</description>
    <label>July</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>