src/objects/Campaign/fields/June__c.field-meta.xml
<CustomField>
    <fullName>June__c</fullName>
    <description>May campaign spend.</description>
    <label>June</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>