src/objects/Campaign/fields/March__c.field-meta.xml
<CustomField>
    <fullName>March__c</fullName>
    <description>March campaign spend</description>
    <label>March</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>