src/objects/Campaign/fields/May__c.field-meta.xml
<CustomField>
    <fullName>May__c</fullName>
    <description>May campaign spend</description>
    <label>May</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>