src/objects/Campaign/fields/November__c.field-meta.xml
<CustomField>
    <fullName>November__c</fullName>
    <description>November campaign spend.</description>
    <label>November</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>