src/objects/Campaign/fields/October__c.field-meta.xml
<CustomField>
    <fullName>October__c</fullName>
    <description>October campaign spend</description>
    <label>October</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>