src/objects/Campaign/fields/Opportunity_Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Win_Rate__c</fullName>
    <formula>IF( NumberOfOpportunities = 0, NULL , 
((NumberOfWonOpportunities / NumberOfOpportunities)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Win Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>