src/objects/Campaign/fields/Response_to_Win_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Response_to_Win_Conversion_Rate__c</fullName>
    <formula>IF( NumberOfResponses = 0, NULL , 
((NumberOfWonOpportunities /  Members__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response to Win Conv. Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>