src/objects/Campaign/fields/ROAS__c.field-meta.xml
<CustomField>
    <fullName>ROAS__c</fullName>
    <formula>IF( Actual_Cost_in_Campaign__c = 0, NULL ,
(( (MRR_of_Won_Opportunities_in_Campaign__c*12) -  Actual_Cost_in_Campaign__c ) /  Actual_Cost_in_Campaign__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Return on Ad Spend (ROAS) on first-year ARR.</inlineHelpText>
    <label>ROAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>