src/objects/Campaign/fields/September__c.field-meta.xml
<CustomField>
    <fullName>September__c</fullName>
    <description>September campaign spend</description>
    <label>September</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>