src/objects/Campaign/fields/Spend_Pipeline_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Spend_Pipeline_Ratio__c</fullName>
    <formula>IF(Actual_Cost_in_Campaign__c = 0,

    0,

    ( (AmountAllOpportunities*12) /  Actual_Cost_in_Campaign__c)

   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The pipeline value is the annualized opportunity amount. 

The industry benchmark of spend:pipeline is 10:1</inlineHelpText>
    <label>Spend:Pipeline Ratio</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>