src/objects/Campaign/fields/Variance_to_Budget__c.field-meta.xml
<CustomField>
    <fullName>Variance_to_Budget__c</fullName>
    <formula>BudgetedCost -  Actual_Cost_in_Campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance to Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>