src/objects/Campaign/listViews/All_Marketing_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Marketing_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>AMOUNT_WON</columns>
    <columns>Response_to_Opp_Conversion_Rate__c</columns>
    <columns>Response_to_Win_Conversion_Rate__c</columns>
    <columns>Spend_Pipeline_Ratio__c</columns>
    <columns>ROAS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>notEqual</operation>
        <value>Outbound</value>
    </filters>
    <label>2. All Marketing Campaigns</label>
</ListView>