src/objects/Campaign/listViews/Review_Site_Campaigns.listView-meta.xml
<ListView>
    <fullName>Review_Site_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>Actual_Cost_in_Campaign__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>AMOUNT_WON</columns>
    <columns>ROAS__c</columns>
    <columns>Spend_Pipeline_Ratio__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Review Site</value>
    </filters>
    <label>4. All Review Site Campaigns</label>
</ListView>